adding in controller bases

--- a/Naspinski.FoodTruck.WebApp/appsettings.json
+++ b/Naspinski.FoodTruck.WebApp/appsettings.json
@@ -1,10 +1,29 @@
 {
+  "ConnectionStrings": {
+    "FoodTruckDb": ""
+  },
+  "AzureSettings": {
+    "StorageAccount": "",
+    "StorageAccountPassword": "",
+    "SendgridApiKey": "",
+    "AdminSiteBaseUrl": "",
+    "HomeUrl": ""
+  },
+  "SquareSettings": {
+    "UseProductionApi": false,
+    "ProductionApplicationId": "",
+    "ProductionAccessToken": "",
+    "ProductionLocationId": "",
+    "SandboxApplicationId": "",
+    "SandboxAccessToken": "",
+    "SandboxLocationId": ""
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
