able to figure out my Map problem, got inital stuff up and running

--- a/Naspinski.FoodTruck.WebApp/Properties/launchSettings.json
+++ b/Naspinski.FoodTruck.WebApp/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49824",
+      "applicationUrl": "http://localhost:44347",
       "sslPort": 44348
     }
   },
@@ -18,10 +18,10 @@
     "Naspinski.FoodTruck.WebApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
