--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 .vs/*
-**.*.json
+**.Development.json
+**.Truck.json
+**.Champlin.json
+**.Tavern.json
+Naspinski.FoodTruck.WebApp/Properties/launchSettings.json
+Naspinski.FoodTruck.WebApp/Properties/launchSettings.json
