--- a/Naspinski.FoodTruck.WebApp/.gitignore
+++ b/Naspinski.FoodTruck.WebApp/.gitignore
@@ -66,6 +66,10 @@ dlldata.c
 *.svclog
 *.scc
 
+#typescript files
+*.js
+*.js.map
+
 # Chutzpah Test files
 _Chutzpah*
 
@@ -230,3 +234,6 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+
+**/launchSettings.json
