--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -7,17 +7,12 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-    <Configurations>Debug;Release;Development</Configurations>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CohesiveSoftware.Messaging" Version="2018.12.3.2" />
     <PackageReference Include="Elmah.Io.AspNetCore" Version="3.8.100" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.2" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.2">
@@ -26,8 +21,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Naspinski.Data" Version="1.0.20200221.215248" />
-    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200222.102507" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200222.102507" />
+    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200224.94659" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200224.94659" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200224.94659" />
+    <PackageReference Include="Naspinski.Messaging" Version="1.0.20200222.104518" />
     <PackageReference Include="SendGrid" Version="9.12.7" />
   </ItemGroup>
 
@@ -40,6 +37,7 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\components\Counter.tsx" />
+    <None Remove="ClientApp\src\models\ISystemState.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,6 +46,10 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\components\Counter.tsx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\src\containers\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
