--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -9,18 +9,13 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "@types/reactstrap": "^8.4.1",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.4.1",
-    "merge": "^1.2.1",
-    "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.4.0",
-    "reactstrap": "^6.3.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "tachyons": "^4.11.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
@@ -31,7 +26,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.11.1",
-    "tachyons": "^4.11.1",
     "typescript": "^3.8.2"
   },
   "eslintConfig": {
