--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Naspinski.Data" Version="1.0.20200221.215248" />
     <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200224.94659" />
     <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200224.94659" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200224.94659" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200304.134159" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200222.104518" />
     <PackageReference Include="SendGrid" Version="9.12.7" />
   </ItemGroup>
@@ -43,16 +43,13 @@
     <None Remove="ClientApp\src\components\Contact.tsx" />
     <None Remove="ClientApp\src\components\Counter.tsx" />
     <None Remove="ClientApp\src\components\Faq.tsx" />
+    <None Remove="ClientApp\src\components\Map.tsx" />
     <None Remove="ClientApp\src\models\Event.ts" />
     <None Remove="ClientApp\src\models\ISystemState.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ClientApp\src\containers\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
