lots of npm updates before I try the scary ones

--- a/Naspinski.FoodTruck.WebApp/ClientApp/tsconfig.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/tsconfig.json
@@ -10,7 +10,6 @@
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -18,7 +17,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "strict": true
   },
   "include": [
     "src"
