--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -22,9 +22,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Naspinski.Data" Version="1.0.20200221.215248" />
-    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200224.94659" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200224.94659" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200311.173300" />
+    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200317.134724" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200317.134724" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200317.134724" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200222.104518" />
     <PackageReference Include="SendGrid" Version="9.12.7" />
   </ItemGroup>
@@ -46,6 +46,8 @@
     <None Remove="ClientApp\src\components\Faq.tsx" />
     <None Remove="ClientApp\src\components\Item.tsx" />
     <None Remove="ClientApp\src\components\Map.tsx" />
+    <None Remove="ClientApp\src\components\Special.tsx" />
+    <None Remove="ClientApp\src\components\Specials.tsx" />
     <None Remove="ClientApp\src\models\BaseModel.ts" />
     <None Remove="ClientApp\src\models\Event.ts" />
     <None Remove="ClientApp\src\models\ISystemState.ts" />
@@ -54,6 +56,8 @@
     <None Remove="ClientApp\src\models\MenuComboPart.ts" />
     <None Remove="ClientApp\src\models\MenuItem.ts" />
     <None Remove="ClientApp\src\models\MenuPrice.ts" />
+    <None Remove="ClientApp\src\models\SpecialModel.ts" />
+    <None Remove="ClientApp\src\models\SpecialsDaily.ts" />
     <None Remove="ClientApp\src\pages\Menu.tsx" />
   </ItemGroup>
 
