--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -10,6 +10,8 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "google-maps": "^4.2.3",
+    "mdbreact": "^4.25.4",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-bootstrap": "^0.25.0",
