--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.23",
