Pretty functional.  Need subscription and menu download.  Add ordering?

--- a/Naspinski.FoodTruck.WebApp/ClientApp/tsconfig.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/tsconfig.json
@@ -19,7 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "strict": true
+    "strict": false
   },
   "include": [
     "src"
