--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.23",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
@@ -17,6 +18,7 @@
     "mdbreact": "^4.25.4",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
