--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -23,8 +23,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Naspinski.Data" Version="1.0.20200221.215248" />
     <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200324.105149" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200324.105149" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200324.105149" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200222.104518" />
     <PackageReference Include="SendGrid" Version="9.13.1" />
   </ItemGroup>
@@ -57,6 +55,7 @@
     <None Remove="ClientApp\src\components\Map.tsx" />
     <None Remove="ClientApp\src\components\Special.tsx" />
     <None Remove="ClientApp\src\components\Specials.tsx" />
+    <None Remove="ClientApp\src\missing-declarations.t.ts" />
     <None Remove="ClientApp\src\models\BaseModel.ts" />
     <None Remove="ClientApp\src\models\Event.ts" />
     <None Remove="ClientApp\src\models\ISystemState.ts" />
@@ -75,6 +74,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Naspinski.FoodTruck.Data.Access">
+      <HintPath>..\..\FoodTruck.Data\Naspinski.FoodTruck.Data.Distribution\bin\Debug\netcoreapp3.1\Naspinski.FoodTruck.Data.Access.dll</HintPath>
+    </Reference>
     <Reference Include="Naspinski.FoodTruck.Data.Distribution">
       <HintPath>..\..\FoodTruck.Data\Naspinski.FoodTruck.Data.Distribution\bin\Debug\netcoreapp3.1\Naspinski.FoodTruck.Data.Distribution.dll</HintPath>
     </Reference>
