--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Naspinski.Data" Version="1.0.20200221.215248" />
     <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200324.105149" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200325.150957" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200325.150957" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200222.104518" />
     <PackageReference Include="SendGrid" Version="9.13.1" />
   </ItemGroup>
@@ -71,15 +73,6 @@
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Naspinski.FoodTruck.Data.Access">
-      <HintPath>..\..\FoodTruck.Data\Naspinski.FoodTruck.Data.Distribution\bin\Debug\netcoreapp3.1\Naspinski.FoodTruck.Data.Access.dll</HintPath>
-    </Reference>
-    <Reference Include="Naspinski.FoodTruck.Data.Distribution">
-      <HintPath>..\..\FoodTruck.Data\Naspinski.FoodTruck.Data.Distribution\bin\Debug\netcoreapp3.1\Naspinski.FoodTruck.Data.Distribution.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
