--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -22,11 +22,13 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Naspinski.Data" Version="1.0.20200221.215248" />
-    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200324.105149" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200325.150957" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200325.150957" />
+    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200326.113725" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200326.113725" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200326.113725" />
+    <PackageReference Include="Naspinski.Maps" Version="1.0.20200222.104700" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200222.104518" />
     <PackageReference Include="SendGrid" Version="9.13.1" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="5.33.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +48,7 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\components\Address.tsx" />
+    <None Remove="ClientApp\src\components\Alert.tsx" />
     <None Remove="ClientApp\src\components\Calendar.tsx" />
     <None Remove="ClientApp\src\components\CalendarEvent.tsx" />
     <None Remove="ClientApp\src\components\Category.tsx" />
@@ -53,6 +56,7 @@
     <None Remove="ClientApp\src\components\Counter.tsx" />
     <None Remove="ClientApp\src\components\Faq.tsx" />
     <None Remove="ClientApp\src\components\Footer.tsx" />
+    <None Remove="ClientApp\src\components\FormAlerts.tsx" />
     <None Remove="ClientApp\src\components\Item.tsx" />
     <None Remove="ClientApp\src\components\Map.tsx" />
     <None Remove="ClientApp\src\components\Special.tsx" />
