--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
+    "react-helmet": "^5.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
