--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 **.Tavern.json
 Naspinski.FoodTruck.WebApp/Properties/launchSettings.json
 Naspinski.FoodTruck.WebApp/Properties/launchSettings.json
+/Naspinski.FoodTruck.WebApp/appsettings.BrothersTavern.json
