got rid of homeurl

--- a/Naspinski.FoodTruck.WebApp/appsettings.json
+++ b/Naspinski.FoodTruck.WebApp/appsettings.json
@@ -6,8 +6,7 @@
     "StorageAccount": "",
     "StorageAccountPassword": "",
     "SendgridApiKey": "",
-    "AdminSiteBaseUrl": "",
-    "HomeUrl": ""
+    "AdminSiteBaseUrl": ""
   },
   "SquareSettings": {
     "UseProductionApi": false,
