coudlnt totally remove homeurl

--- a/Naspinski.FoodTruck.WebApp/appsettings.json
+++ b/Naspinski.FoodTruck.WebApp/appsettings.json
@@ -6,7 +6,8 @@
     "StorageAccount": "",
     "StorageAccountPassword": "",
     "SendgridApiKey": "",
-    "AdminSiteBaseUrl": ""
+    "AdminSiteBaseUrl": "",
+    "HomeUrl": ""
   },
   "SquareSettings": {
     "UseProductionApi": false,
