--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Naspinski.Maps" Version="1.0.20200327.135151" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200327.135132" />
     <PackageReference Include="SendGrid" Version="9.13.1" />
+    <PackageReference Include="Square" Version="5.1.0" />
     <PackageReference Include="Twilio.AspNet.Core" Version="5.33.1" />
   </ItemGroup>
 
@@ -59,6 +60,7 @@
     <None Remove="ClientApp\src\components\FormAlerts.tsx" />
     <None Remove="ClientApp\src\components\Item.tsx" />
     <None Remove="ClientApp\src\components\Map.tsx" />
+    <None Remove="ClientApp\src\components\ShoppingCart.tsx" />
     <None Remove="ClientApp\src\components\Special.tsx" />
     <None Remove="ClientApp\src\components\Specials.tsx" />
     <None Remove="ClientApp\src\components\Spinner.tsx" />
@@ -66,11 +68,7 @@
     <None Remove="ClientApp\src\models\BaseModel.ts" />
     <None Remove="ClientApp\src\models\Event.ts" />
     <None Remove="ClientApp\src\models\ISystemState.ts" />
-    <None Remove="ClientApp\src\models\MenuBase.ts" />
-    <None Remove="ClientApp\src\models\MenuCategory.ts" />
-    <None Remove="ClientApp\src\models\MenuComboPart.ts" />
-    <None Remove="ClientApp\src\models\MenuItem.ts" />
-    <None Remove="ClientApp\src\models\MenuPrice.ts" />
+    <None Remove="ClientApp\src\models\MenuModels.ts" />
     <None Remove="ClientApp\src\models\SiblingSite.ts" />
     <None Remove="ClientApp\src\models\SpecialModel.ts" />
     <None Remove="ClientApp\src\models\SpecialsDaily.ts" />
@@ -82,17 +80,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="ClientApp\src\models\MenuComboPart.js.map">
-      <DependentUpon>MenuComboPart.js</DependentUpon>
-    </None>
     <None Update="ClientApp\src\models\MenuPrice.js.map">
       <DependentUpon>MenuPrice.js</DependentUpon>
-    </None>
-    <None Update="ClientApp\src\models\MenuBase.js.map">
-      <DependentUpon>MenuBase.js</DependentUpon>
-    </None>
-    <None Update="ClientApp\src\models\MenuItem.js.map">
-      <DependentUpon>MenuItem.js</DependentUpon>
     </None>
   </ItemGroup>
 
