--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -22,9 +22,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Naspinski.Data" Version="1.0.20200327.134940" />
-    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200404.171115" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200404.171115" />
-    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200404.171115" />
+    <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20200405.154847" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20200405.154847" />
+    <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20200405.154847" />
     <PackageReference Include="Naspinski.Maps" Version="1.0.20200327.135151" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200327.135132" />
     <PackageReference Include="SendGrid" Version="9.13.2" />
@@ -59,6 +59,7 @@
     <None Remove="ClientApp\src\components\Footer.tsx" />
     <None Remove="ClientApp\src\components\FormAlerts.tsx" />
     <None Remove="ClientApp\src\components\Item.tsx" />
+    <None Remove="ClientApp\src\components\ItemPriceButton.tsx" />
     <None Remove="ClientApp\src\components\Map.tsx" />
     <None Remove="ClientApp\src\components\ShoppingCart.tsx" />
     <None Remove="ClientApp\src\components\Special.tsx" />
