--- a/Naspinski.FoodTruck.WebApp/appsettings.json
+++ b/Naspinski.FoodTruck.WebApp/appsettings.json
@@ -6,8 +6,7 @@
     "StorageAccount": "",
     "StorageAccountPassword": "",
     "SendgridApiKey": "",
-    "AdminSiteBaseUrl": "",
-    "HomeUrl": ""
+    "AdminSiteBaseUrl": ""
   },
   "SquareSettings": {
     "UseProductionApi": false,
@@ -16,7 +15,8 @@
     "ProductionLocationId": "",
     "SandboxApplicationId": "",
     "SandboxAccessToken": "",
-    "SandboxLocationId": ""
+    "SandboxLocationId": "",
+    "Locations": []
   },
   "Logging": {
     "LogLevel": {
