added in cart clear and local storage

--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -75,6 +75,7 @@
     <None Remove="ClientApp\src\models\SpecialsDaily.ts" />
     <None Remove="ClientApp\src\models\Utility.ts" />
     <None Remove="ClientApp\src\pages\Menu.tsx" />
+    <None Remove="ClientApp\src\pages\Terms.tsx" />
   </ItemGroup>
 
   <ItemGroup>
