--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -21,11 +21,11 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-modal-image": "^2.5.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-square-payment-form": "^0.6.1",
-    "rimraf": "^3.0.2",
     "tachyons": "^4.11.1"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.18.3",
+    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "eslintConfig": {
