appsettings missing elmah

--- a/Naspinski.FoodTruck.WebApp/appsettings.json
+++ b/Naspinski.FoodTruck.WebApp/appsettings.json
@@ -15,5 +15,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ElmahSettings": {
+    "ApiKey": "",
+    "LogId": ""
+  }
 }
