--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -28,21 +28,27 @@
     <PackageReference Include="Naspinski.Maps" Version="1.0.20200606.132104" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200606.132258" />
     <PackageReference Include="SendGrid" Version="9.15.1" />
+    <PackageReference Include="Square" Version="5.3.0" />
     <PackageReference Include="Twilio.AspNet.Core" Version="5.33.1" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="bin\**" />
     <Content Remove="ClientApp\src\assets\scss\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="bin\**" />
     <None Remove="ClientApp\src\assets\scss\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
     <Compile Remove="ClientApp\src\assets\scss\**" />
+    <EmbeddedResource Remove="bin\**" />
     <EmbeddedResource Remove="ClientApp\src\assets\scss\**" />
+    <TypeScriptCompile Remove="bin\**" />
     <TypeScriptCompile Remove="ClientApp\src\assets\scss\**" />
   </ItemGroup>
 
@@ -83,8 +89,6 @@
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
-    <None Include="bin\Square.dll" />
-    <None Include="bin\Square.pdb" />
   </ItemGroup>
 
   <ItemGroup>
