--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Naspinski.Maps" Version="1.0.20200606.132104" />
     <PackageReference Include="Naspinski.Messaging" Version="1.0.20200606.132258" />
     <PackageReference Include="SendGrid" Version="9.15.1" />
+    <PackageReference Include="Square" Version="5.3.0" />
     <PackageReference Include="Twilio.AspNet.Core" Version="5.33.1" />
   </ItemGroup>
 
@@ -88,12 +89,6 @@
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Square">
-      <HintPath>..\..\square-dotnet-sdk-master\Square\bin\Debug\netstandard1.3\Square.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
