--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -16,7 +16,6 @@
     "@types/react-router-dom": "^5.1.3",
     "google-maps": "^4.2.3",
     "mdbreact": "^4.25.4",
-    "node-sass": "^6.0.1",
     "react": "^16.13.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
@@ -26,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-square-payment-form": "^0.6.1",
+    "sass": "^1.52.1",
     "tachyons": "^4.11.1"
   },
   "devDependencies": {
