--- a/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
+++ b/Naspinski.FoodTruck.WebApp/Naspinski.FoodTruck.WebApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
@@ -11,25 +11,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elmah.Io.AspNetCore" Version="3.8.103" />
-    <PackageReference Include="Ical.Net" Version="4.1.11" />
-    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.9.2">
+    <PackageReference Include="Elmah.Io.AspNetCore" Version="4.2.42" />
+    <PackageReference Include="Ical.Net" Version="4.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.8.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
-    <PackageReference Include="Naspinski.Data" Version="1.0.20200327.134940" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
+    <PackageReference Include="Naspinski.Data" Version="1.0.20220924.151235" />
     <PackageReference Include="Naspinski.FoodTruck.Data" Version="1.0.20201215.162847" />
     <PackageReference Include="Naspinski.FoodTruck.Data.Access" Version="1.0.20201215.162847" />
     <PackageReference Include="Naspinski.FoodTruck.Data.Distribution" Version="1.0.20201215.162847" />
     <PackageReference Include="Naspinski.Maps" Version="1.0.20200606.132104" />
-    <PackageReference Include="Naspinski.Messaging" Version="1.0.20200606.132258" />
-    <PackageReference Include="SendGrid" Version="9.15.1" />
+    <PackageReference Include="Naspinski.Messaging" Version="1.0.20220924.171248" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="Square" Version="5.3.0" />
-    <PackageReference Include="Twilio.AspNet.Core" Version="5.33.1" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
