--- a/Naspinski.FoodTruck.WebApp/ClientApp/package.json
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/package.json
@@ -23,7 +23,7 @@
     "react-modal-image": "^2.5.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "5.0.0",
     "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.52.1",
     "tachyons": "^4.11.1"
