--- a/Naspinski.FoodTruck.WebApp/clientapp/package.json
+++ b/Naspinski.FoodTruck.WebApp/clientapp/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "eslint": "^8.38.0",
     "google-maps": "^4.2.3",
     "mdbreact": "^4.25.4",
     "react": "^16.13.0",
